# stillsite

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  (+2 more)
apps/admin/: README.md  pyproject.toml
apps/admin/src/cms_admin/: THIRD_PARTY_NOTICES.md  __init__.py  activity_view.py  app.py  articles.py  auth.py  bulk.py  calendar_view.py  dashboard.py  db.py  demo_export.py  deploy.py  extensions_view.py  forms_endpoint.py  i18n.py  mail.py  media.py  menu.py  migration.py  navigation.py  notes.py  notifications.py  pages.py  preview_links.py  publishing.py  redirects.py  search.py  security.py  settings.py  submissions_view.py  themes_view.py  totp.py  translations_queue.py  trash.py  users.py  validation_report.py  webhooks.py  workflow.py
apps/admin/src/cms_admin/locale/de/LC_MESSAGES/: messages.po
apps/admin/src/cms_admin/locale/es/LC_MESSAGES/: messages.po
apps/admin/src/cms_admin/locale/fr/LC_MESSAGES/: messages.po
apps/admin/src/cms_admin/locale/pt_PT/LC_MESSAGES/: messages.po
apps/admin/src/cms_admin/static/: admin.css  admin.js  theme-init.js
apps/admin/src/cms_admin/static/fonts/: OFL.txt
apps/admin/src/cms_admin/templates/: _design_preview.html.j2  _fields.html.j2  _notes.html.j2  _revisions.html.j2  _validation_report.html.j2  article_edit.html.j2  article_new.html.j2  article_translation.html.j2  articles_list.html.j2  base.html.j2  bulk_report.html.j2  calendar.html.j2  dashboard.html.j2  extension_settings.html.j2  extensions.html.j2  login.html.j2  media_edit.html.j2  media_list.html.j2  media_new.html.j2  menu.html.j2  migration.html.j2  page_edit.html.j2  page_new.html.j2  page_translation.html.j2  pages_list.html.j2  publishing.html.j2  reset_done.html.j2  reset_form.html.j2  reset_request.html.j2  revision_detail.html.j2  search.html.j2  section_edit.html.j2  section_translation.html.j2  shell.html.j2  submissions.html.j2  themes.html.j2  translations_queue.html.j2  trash.html.j2  two_factor.html.j2  users.html.j2
(+136 files in other folders)
