[project]
name = "cms-admin"
version = "0.1.0"
description = "Stillsite admin panel: FastAPI API + server-rendered UI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = ["cms-core", "cms-validation", "cms-build", "fastapi>=0.115", "jinja2>=3.1", "uvicorn>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_admin"]
