[project]
name = "sardine-cms-admin"
version = "0.1.0"
description = "Sardine CMS admin panel: FastAPI API + server-rendered UI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "sardine-cms-core",
    "sardine-cms-validation",
    "sardine-cms-build",
    "sardine-cms-cli",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_admin"]
