[project]
name = "sardine-cms-admin"
version = "0.3.0"
description = "Sardine CMS admin panel: FastAPI API + server-rendered UI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "sardine-cms-core>=0.3.0,<0.4",
    "sardine-cms-validation>=0.3.0,<0.4",
    "sardine-cms-build>=0.3.0,<0.4",
    "sardine-cms-cli>=0.3.0,<0.4",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn>=0.30",
    "argon2-cffi>=23.1",
    "python-multipart>=0.0.9",
    "babel>=2.14",
]

[project.urls]
Homepage = "https://sardine.ph7x.com"
Repository = "https://github.com/ph7x-Systems/sardine-cms"
Documentation = "https://github.com/ph7x-Systems/sardine-cms/wiki"
Changelog = "https://github.com/ph7x-Systems/sardine-cms/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_admin"]
